# soa-workbench

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  README_endpoints.md  normalize_soa.py  pyproject.toml  pytest.ini  requirements.txt  validate_soa.py
.github/workflows/: python-app.yml
docs/: api_endpoints.xlsx  cosa_application_soa_workbench.yaml
files/: DDF_Terminology_2025-09-26.xls  Protocol_Terminology_2025-09-26.xls  pilot_LLZT_protocol.xlsx
scripts/: run_element_checks.py  run_rollback_elements_check.py
src/soa_builder/: __init__.py  cli.py  normalization.py  schedule.py  validation.py
src/soa_builder.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/soa_builder/web/: app.py  audit.py  db.py  initialize_database.py  migrate_database.py  schemas.py
src/soa_builder/web/routers/: activities.py  arms.py  elements.py  epochs.py  freezes.py  rollback.py  visits.py
src/soa_builder/web/static/: style.css
src/soa_builder/web/templates/: base.html  edit.html  (+16 more)
tests/: conftest.py  run_all.py  test_activity_concepts.py  test_bulk_import.py  test_cell_clear.py  test_concept_categories.py  test_concepts_refresh.py  test_deletion.py  test_element_id_generation.py  test_elements.py  test_empty_concepts_state.py  test_env_dotenv_load.py  test_exports.py  test_fetch_sdtm_specializations.py  test_normalization.py  test_schedule.py  test_schedule_edge_cases.py  test_terminology_date.py  test_ui_add_element.py  test_ui_export_buttons.py  test_ui_set_visit_epoch.py  test_ui_toggle.py  test_ui_visit_create.py  test_validation.py  test_validation_intervals.py  test_web_api.py  test_web_ui.py
