[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "soa-builder"
version = "0.1.0"
description = "Schedule of Activities normalization, expansion, and validation utilities"
readme = "README.md"
requires-python = ">=3.9"
authors = [ { name = "Pending Intent" } ]
license = { text = "Proprietary" }
dependencies = [
  "pandas>=2.0.0",
  "click>=8.1.0",
  "fastapi>=0.110.0",
  "uvicorn>=0.23.0",
  "openpyxl>=3.1.0",
  "reportlab>=4.0.0",
  "requests>=2.31.0",
  "python-dotenv>=1.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "ruff>=0.5.0",
  "black>=24.0.0",
  "detect-secrets>=1.4.0"
]

[project.scripts]
soa-builder = "soa_builder.cli:main"
soa-builder-web = "soa_builder.web.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]